--- a/projects/projects.html
+++ b/projects/projects.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>ninomnn</title>
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
-        <link rel="stylesheet" type="text/css" href="../css/projects.css">
+        <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="../assets/css/projects.css">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="projectsurls.js" async></script>
@@ -31,7 +31,7 @@
         <a href="projects.html" class="nav-link"><li>Réalisations</li></a>
         <a href="../index.html#skills" class="nav-link"><li>Compétences</li></a>
         <a href="../index.html#contact" class="nav-link"><li>Contact</li></a>
-        <a href="../CV_MENNOUNI_Nino_Développeur_Web.pdf" class="nav-link"><li>CV</li></a>
+        <a href="../CV/CV_MENNOUNI_Nino_Développeur_Web.pdf" class="nav-link"><li>CV</li></a>
       </nav>
 
         <div class="portfolio">
