--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
   <head>
     <title>ninomnn</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/carousel.css">
-    <link rel="stylesheet" type="text/css" href="css/scroll.css">
-    <link rel="stylesheet" type="text/css" href="css/about.css">
-    <link rel="stylesheet" type="text/css" href="css/skill.css">
-    <link rel="stylesheet" type="text/css" href="css/intro.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/carousel.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/scroll.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/about.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/skill.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="carousel.js" async></script>
@@ -37,7 +37,7 @@
       <a href="projects/projects.html" class="nav-link"><li>Réalisations</li></a>
       <a href="#skills" class="nav-link"><li>Compétences</li></a>
       <a href="#contact" class="nav-link"><li>Contact</li></a>
-      <a href="CV_MENNOUNI_Nino_Développeur_Web.pdf" class="nav-link"><li>CV</li></a>
+      <a href="CV/CV_MENNOUNI_Nino_Développeur_Web.pdf" class="nav-link"><li>CV</li></a>
     </nav>
     
     <div class="snap-scroll-wrapper">
@@ -53,7 +53,7 @@
 
     <section class="snap">
       <div class="about">
-        <img src="images/NINO.jpg"/>
+        <img src="assets/images/NINO.jpg"/>
         <div class="presentation">
           <h1>Présentation</h1>
           <p>
@@ -77,17 +77,17 @@
         <div class="cards">
           <label class="card" for="item-1" id="song-1">
             <div class="slide">
-              <img src="images/projects.jpg" />
+              <img src="assets/images/projects.jpg" />
             </div>
           </label>
           <label class="card" for="item-2" id="song-2">
             <div class="slide">
-              <img src="images/github.jpg" />
+              <img src="assets/images/github.jpg" />
             </div>
           </label>
           <label class="card" for="item-3" id="song-3">
             <div class="slide">
-              <img src="images/cv.jpg" />
+              <img src="assets/images/cv.jpg" />
             </div>
           </label>
         </div>
