--- a/projects/projects.html
+++ b/projects/projects.html
@@ -70,11 +70,11 @@
             <h1>Contactez-moi</h1>
             <div class="contactWays">
               <div class="email">
-                <i class="fa fa-envelope" style="font-size:24px;color:#fff"></i><a href="mennouni.nino.pro@gmail.com">mennouni.nino.pro@gmail.com</a>
+                <i class="fa fa-envelope" style="color:#fff"></i><a href="mennouni.nino.pro@gmail.com">mennouni.nino.pro@gmail.com</a>
               </div>
               <div class="contactIcons">
-                <a href="https://www.linkedin.com/in/ninomennouni/" id="linkedinico"><i class="fa fa-linkedin-square" style="font-size:48px;color: #fff;"></i></a>
-                <a href="https://github.com/ninomnn" id="githubico"><i class="fa fa-github" style="font-size:48px;color:#fff"></i></a>
+                <a href="https://www.linkedin.com/in/ninomennouni/" id="linkedinico"><i class="fa fa-linkedin-square" style="color: #fff;"></i></a>
+                <a href="https://github.com/ninomnn" id="githubico"><i class="fa fa-github" style="color:#fff"></i></a>
               </div>
             </div>
             <div class="name2">
